# podcast_transcriber

./: .gitignore  LICENSE.txt  README.md  TODO.md  main.py  pyproject.toml  transcribe_podcast.py
audio/: README.md
segments/: README.md
transcripts/: README.md
