[project]
name = "podcast-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.1.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]
